# chaquopy-project-maker

./: .gitignore  .gitmodules  ChaquopyProjectMaker.spec  LICENSE  README.md  pyproject.toml
chaquopy_project_maker/: __init__.py  configs.py  core.py  hidden_imports.py  main.py  utils.py
